# kollider-client

./: Cargo.toml  README.md  default.nix  shell.nix
nix/: overlay.nix
src/: bin.rs  lib.rs
src/kollider/: mod.rs  websocket.rs
src/kollider/api/: error.rs  market.rs  mod.rs  order.rs  products.rs
src/kollider/api/account/: deposit.rs  info.rs  mod.rs  withdrawal.rs
src/kollider/api/market/: history.rs  mod.rs  orderbook.rs  ticker.rs
src/kollider/api/trading/: mod.rs  order.rs
src/kollider/client/: account.rs  env.rs  error.rs  market.rs  mod.rs  products.rs  trading.rs
src/kollider/websocket/: cli.rs  client.rs  data.rs  error.rs  mod.rs  oneshot.rs
