[package]
name = "kollider-client"
description = "API client to the kollider.xyz derivation platform"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
crypto-common = "0.1.1"
env_logger = { version = "0.9.0", optional = true }
futures = "0.3.19"
futures-channel = "0.3"
hmac = "0.12.0"
log = "0.4.14"
reqwest = { version = "0.11", features = [ "json" ] }
rweb = { version = "0.15.0", features = ["openapi"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "3.0.1"
sha2 = "0.10.0"
shellfish = { version = "0.6.0", features = ["rustyline", "async"]}
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"], optional = true }
tungstenite = { version = "*", optional = true }
url = "2.0.0"
uuid = { version = "0.8.2", features = ["v4"]}

[dev-dependencies]
maplit = "1.0.2"

[features]
default = ["ws"]
build-binary = ["env_logger", "tokio"]
ws = ["tokio-tungstenite", "tungstenite", "tokio"]
openapi = [ "rweb" ]

[lib]
name = "kollider_api"
path = "src/lib.rs"

[[bin]]
name = "kollider-cli"
path = "src/bin.rs"
required-features = ["build-binary"]